[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/misc/agnette_arrow.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/AgnetteArrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24.3779, 3.5433 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32.1485, 10.3226 )

[node name="AgnetteArrow" type="KinematicBody2D"]
scale = Vector2( 1.4, 1.4 )
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.243938, 2.52203 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="." groups=["Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.125858, 2.16035 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
